--- a/packages/router/tsconfig.json
+++ b/packages/router/tsconfig.json
@@ -1,5 +1,6 @@
 {
-  "include": ["src", "types"],
+  "include": ["src", "types", "test"],
+  "exclude": ["node_modules", "dist", "__tests__", "**/*.test*", "**/*.spec*"],
   "compilerOptions": {
     "module": "esnext",
     "lib": ["dom", "esnext"],
